w32threads: with only 1 thread there cant be a active threading mode.

Fixes ticket284

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>